# CPlusPlusHomework

./: .gitignore  README.md
Snippets/: CMakeLists.txt  Nachname.txt  Vorname.txt  matrix.cpp  randomNameGenerator.cpp
Snippets/0x01/: CMakeLists.txt  a_console_io.cpp
Snippets/0x01(Datentypen&Funktionen)/uebungen0x01/: CMakeLists.txt  blue_canyon.cpp  sanborn_cliff.cpp
Snippets/0x01/uebungen0x01/: beverly_hollow.cpp  pine_point.cpp  west_rose_cliff.cpp
Snippets/0x02(Referenzen&Exceptions)/uebungen0x02/: CMakeLists.txt  elkford.cpp
Snippets/0x02/uebungen0x02/: baker_river.cpp  harshire.cpp
Snippets/0x03/: Makefile  a_ctor_dtor_throw.cpp  b_getter_setter.cpp
Snippets/0x03(Klassen)/: e_class_address.cpp
Snippets/0x03(Klassen)/uebungen/: lucky_rock.cpp  meadow_river.cpp
Snippets/0x03/uebungen/: CMakeLists.txt  ravencastle.cpp  stone_ridge.cpp
Snippets/0x04/: CMakeLists.txt
Snippets/0x04(Generics,Container&Iteratoren)/: a_generics_03_container.cpp
Snippets/0x04(Generics,Container&Iteratoren)/uebungen/: hicks_bluff.cpp  oakberg.cpp  sparrow_town.cpp
Snippets/0x04/uebungen/: CMakeLists.txt  ashfield.cpp  bakerpolis.cpp  brickgate.cpp
Snippets/0x06/: sol_greenmound.cpp
Snippets/0x07/: b_op_01_address.cpp
Snippets/0x09(Pointer,Generics)/: b_smartptr_02_weakptr.cpp
Snippets/0x0a/: CMakeLists.txt  a_lambda_03_functions.cpp
Snippets/0x0a(Lambdas&Algorithmen)/: b_algorithms_01_nonmod.cpp
Snippets/Check/: CMakeLists.txt  check1_block1.cpp  sol_check1_block1.cpp
Snippets/cpp_3231105_bergmann/: CMakeLists.txt  a1234.cpp
(+30 files in other folders)
