cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)

add_executable(a_console_io a_console_io)
add_executable(b_primitives b_primitives)
add_executable(c_strings c_strings)
add_executable(d_consts d_consts)
add_executable(e_arrays e_arrays)
add_executable(f_if_for_while f_if_for_while)
add_executable(g_functions g_functions)
add_executable(h_scope h_scope)
add_executable(work_for work_for)
add_executable(work_int8 work_int8)
add_executable(work_string work_string)
add_executable(work_switch work_switch)

