cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)

add_executable(oakberg oakberg)
add_executable(brickgate brickgate)
add_executable(hicks_bluff hicks_bluff)
add_executable(ashfield ashfield)
add_executable(sparrow_town sparrow_town)
add_executable(bakerpolis bakerpolis)
